--- a/process_config.json
+++ b/process_config.json
@@ -1,1 +1,26 @@
-[]
+[
+  {
+    "pid": 1,
+    "arrival_time": 0,
+    "burst_time": 5,
+    "priority": 0
+  },
+  {
+    "pid": 2,
+    "arrival_time": 1,
+    "burst_time": 3,
+    "priority": 0
+  },
+  {
+    "pid": 3,
+    "arrival_time": 2,
+    "burst_time": 4,
+    "priority": 0
+  },
+  {
+    "pid": 4,
+    "arrival_time": 4,
+    "burst_time": 1,
+    "priority": 0
+  }
+]
